Fixed layout issues on landing page

--- a/src/components/pages/home/interiorPreview/interiorPreview.module.css
+++ b/src/components/pages/home/interiorPreview/interiorPreview.module.css
@@ -94,7 +94,7 @@
     align-items: flex-start;
   }
 
-  .cardBtnMenu {
+  /* .cardBtnMenu {
     width: 100%;
     max-width: 300px;
     display: flex;
@@ -105,7 +105,7 @@
   .cardBtnMenu button {
     width: var(--button-width-desktop);
     align-self: flex-start;
-  }
+  } */
 }
 
 @media screen and (min-width: 1100px) {
