--- a/src/components/pages/home/menuPreview/menuPreview.module.css
+++ b/src/components/pages/home/menuPreview/menuPreview.module.css
@@ -98,17 +98,18 @@
   }
 
   .cardBtnMenu {
-    width: 100%;
-    max-width: 300px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
+    /* width: 100%; */
+    /* max-width: 300px; */
+    /* align-self: flex-end; */
+    /* display: flex; */
+    /* justify-content: flex-end; */
+    /* align-items: flex-end; */
   }
 
-  .cardBtnMenu button {
+  /* .cardBtnMenu button {
     width: var(--button-width-desktop);
     align-self: flex-end;
-  }
+  } */
 }
 
 @media screen and (min-width: 1100px) {
